<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:layout_margin="8dp"
            android:id="@+id/edit_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_taste"
            android:layout_margin="8dp"
            android:id="@+id/edit_taste"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_color"
            android:layout_margin="8dp"
            android:id="@+id/edit_color"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_write"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:onClick="writeToDatabase"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:text="@string/button_read"
            android:onClick="readFromDatabase"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/remove_all"
        android:onClick="removeAllRows"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
    />

</LinearLayout>